user.css
/* ... */
.main-playlistEditDetailsModal-titleInput::placeholder,
.main-playlistEditDetailsModal-descriptionTextarea::placeholder {
  color: var(--spice-text);
}

.main-editImageButton-overlay {
  background-color: rgba(var(--spice-rgb-card), 0.7);
}


/* dialogs */

.main-deletePlaylistDialog-container,
.main-deleteFolderDialog-container {
  background-color: var(--spice-card);
  color: var(--spice-text);
  border-radius: var(--border-radius-1);
}

.main-deletePlaylistDialog-secondaryButton,
.main-deleteFolderDialog-secondaryButton {
  color: var(--spice-button);
}

.main-deletePlaylistDialog-buttonContainer>:last-child,
.main-deleteFolderDialog-buttonContainer>:last-child {
  background-color: var(--spice-notification-error);
}


/* friend activity */
.spotify__container--is-desktop.spotify__os--is-windows.buddyfeed-visible .main-topBar-container {
  padding-inline-end: 170px;
}

.main-connectToFacebook-container {
  margin-top: 50px;
}

.main-connectToFacebook-text,
.main-connectToFacebook-disclaimer,
.main-connectToFacebook-headerTitle,
.main-addFriendsView-headerText p {
  color: var(--spice-text);
}

.main-addFriendsView-header {
  margin-top: 16px;
  border-bottom: 1px solid var(--spice-selected-row) !important;
}

.main-addFriendsView-facebookIconWrapper {
  background-color: #008AFF !important;
}

.main-addFriendsView-filterInput {
  background-color: var(--spice-card) !important;
  color: var(--spice-text) !important;
}

.main-addFriendsView-filterInput::placeholder {
  color: var(--spice-text) !important;
}

.main-buddyFeed-header {
  opacity: 1 !important;
}

.main-buddyFeed-friendsFeedContainer {
  margin-top: 25px;
}

.main-buddyFeed-findFriendsIcon,
.main-buddyFeed-addFriendPlaceholderIcon {
  color: var(--spice-text) !important;
}

.main-buddyFeed-username a {
  color: var(--spice-text) !important;
}

.main-buddyFeed-artistAndTrackName a,
.main-buddyFeed-activityMetadata,
.main-buddyFeed-playbackContextLink {
  color: var(--spice-subtext) !important;
}

.main-buddyFeed-friendActivity {
  background-color: var(--spice-card);
  border-radius: var(--border-radius-1);
  margin: 8px;
  padding: 8px 8px 8px 12px;
}

.main-buddyFeed-addFriendsContainer {
  background-color: var(--spice-main);
}

.main-buddyFeed-buddyFeedRoot,
.main-buddyFeed-buddyFeed {
  width: 280px;
  z-index: 0;
}

.main-buddyFeed-buddyFeedRoot .main-avatar-avatar {
  margin-right: 8px;
}

.main-buddyFeed-activityMetadata {
  max-width: 190px;
}

.profile-userOverview-section .main-shelf-shelfGrid {
  overflow: hidden;
}

/* settings */

.main-dropDown-dropDown,
option {
  background-color: var(--spice-card) !important;
  color: var(--spice-text);
}

.main-dropDown-dropDown {
  border-radius: var(--border-radius-2) !important;
}

.x-toggle-indicator {
  background-color: var(--spice-card) !important;
}

.x-settings-facebookButton,
.main-connectToFacebook-facebookButton {
  color: var(--spice-shadow);
}

.x-toggle-indicatorWrapper {
  background-color: rgba(var(--spice-rgb-subtext), .3) !important;
}

.x-proxySettings-proxyInput {
  border-radius: var(--border-radius-2) !important;
  background-color: var(--spice-card) !important;
}

.x-proxySettings-proxyInput::placeholder {
  color: var(--spice-subtext);
}

.x-proxySettings-proxyInput:focus {
  border-color: var(--spice-button-active);
}


/* connect device menu */

._9eb5acf729a98d62135ca21777fef244-scss,
.connect-device-button {
  color: var(--spice-shadow);
}

.connect-device-list-container {
  border-radius: var(--border-radius-1);
  border: 1px solid var(--spice-button-disabled);
}

.connect-device-list-item {
  margin: 0 8px;
  border-radius: var(--border-radius-2);
  width: -webkit-fill-available;
}

.connect-device-list-item:last-child {
  margin: 0 8px 8px;
}

.connect-device-list-item:focus,
.connect-device-list-item:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.05);
}

.connect-header {
  display: none;
}

.connect-device-list-item--active,
.connect-device-list-item--active .connect-device-list-item__icon,
.connect-device-list-item--active .connect-device-list-item__device-subtitle {
  color: var(--spice-subtext);
}


/* player */

.Root__now-playing-bar {
  padding-right: 6px;
  margin: 0px 13px 13px 13px;
  width: calc(100% - 26px);
  box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) !important;
  border-radius: var(--border-radius-1);
  border: 1px solid var(--spice-player-border);
}

.main-nowPlayingBar-container {
  border-radius: var(--border-radius-1);
}

.gqeP9Y0_y6DLm4CD_m3Q {
  border: 0px; 
  background: none;
}

.main-nowPlayingBar-container {
  border-top: 0px;
}

.now-playing--cover-expanded {
  transform: translateX(0px) !important;
}

.playback-bar,
.progress-bar__fg_wrapper,
.lRNLjBiX_H7SPYbkJKLp,
.lIrtJi5Y_8ENU19VSvJO {
  --fg-color: var(--spice-accent) !important;
  --is-active-fg-color: var(--spice-accent) !important;
  --bg-color: var(--spice-player-bar-bg);
}

.progress-bar__slider,
.giO6cIQ8auPNZuTvC4Y8 {
  background-color: var(--spice-accent) !important;
  border: 4px solid var(--spice-selected-row);
  box-shadow: 0 0 3px 0 var(--spice-player-bar-shadow) !important;
  box-sizing: content-box !important;
  width: 11px;
  height: 11px;
  opacity: 1 !important;
  display: block;
}

.main-nowPlayingWidget-nowPlaying>.ellipsis-one-line,
.main-trackInfo-container {
  margin-left: 74px;
}

.main-coverSlotExpanded-container,
.T6whS8zYB9fG_tIdTg6m {
  position: fixed;
  top: calc(100% - 320px);
  left: calc(100% - 220px);
  width: 200px;
  height: 200px;
  visibility: hidden;
  transform-origin: center;
  box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.5) !important;
  animation: 1s coverExpandedIn;
  animation-fill-mode: forwards;
  background: none;
}

.main-coverSlotExpanded-containerExitActive {
  display: none;
}

@keyframes coverExpandedIn {
  99% {
    visibility: hidden;
  }
  100% {
    visibility: visible;
  }
}
/* ... */

